Update notebook file

--- a/RL-Temporal-Difference.ipynb
+++ b/RL-Temporal-Difference.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
     "        self.g04 = self.prob*(self.Rs[0]+ self.Rs[2]+ self.Rs[4]+ self.Rs[5] + self.Vs[5]) + (1-self.prob)*(self.Rs[1]+ self.Rs[3]+ self.Rs[4]+ self.Rs[5] + self.Vs[5])\n",
     "        self.g05 = self.prob*(self.Rs[0]+ self.Rs[2]+ self.Rs[4]+ self.Rs[5]+ self.Rs[6] + self.Vs[6]) + (1-self.prob)*(self.Rs[1]+ self.Rs[3]+ self.Rs[4]+ self.Rs[5]+ self.Rs[6] + self.Vs[6])\n",
     "\n",
-    "        return np.roots([-self.g05,self.g05-self.g04,self.g04-self.g03,self.g03-self.g02,self.g02-self.g01,self.g01-G])\n",
+    "        return np.roots([-self.g05+G,self.g05-self.g04,self.g04-self.g03,self.g03-self.g02,self.g02-self.g01,self.g01-G])\n",
     "\n",
     "    def complex_num(self):\n",
     "        '''\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -180,7 +180,7 @@
       "test_case_3 (__main__.TestTDNotebook) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.008s\n",
+      "Ran 3 tests in 0.027s\n",
       "\n",
       "OK\n"
      ]
@@ -188,10 +188,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x116edf1f0>"
+       "<unittest.main.TestProgram at 0x106ffa520>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
     "                V=[12.3, -5.2, 0.0, 25.4, 10.6, 9.2, 0.0],\n",
     "                rewards=[-2.4, 0.8, 4.0, 2.5, 8.6, -6.4, 6.1]\n",
     "            ),\n",
-    "            0.569,\n",
+    "            0.519,\n",
     "            decimal=3\n",
     "        )\n",
     "        \n",
